Fixed compile warnings